shop project prove 02

--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -19,8 +19,8 @@
                     <img src="https://st2.depositphotos.com/1105977/5461/i/600/depositphotos_54615585-stock-photo-old-books-on-wooden-table.jpg" alt="A book">
                 </div>
                 <div class="card__content">
-                    <h2 class="product__price">$19.99</h2>
-                    <p class="product__description">A very interesting book here on display</p>
+                    <h2 class="product__price">$<%= product.price %></h2>
+                    <p class="product__description"><%= product.description %></p>
                 </div>
             </article>
             <% } %>
