--- a/views/add-product.ejs
+++ b/views/add-product.ejs
@@ -12,8 +12,21 @@
             <div class="form-control">
                 <label for="title">Title</label>
                 <input type="text" name="title" id="title">
+                <label for="price">Price</label>
+                <input type="text" name="price" id="price">
+                <label for="description">Description</label>
+                <input type="text" name="description" id="description">
             </div>
             <button type="submit">Add Product</button>
+        </form>
+
+        <form class="delete-product-form" action="/admin/delete-product" method="POST">
+            <div class="form-control">
+                <label for="delete-title">Title</label>
+                <input type="text" name="delete-title" id="delete-title">
+ 
+            </div>
+            <button type="submit">Delete Product</button>
         </form>
     </main>
 
