push final week

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,7 +1,6 @@
 <%- include('../includes/head.ejs') %>
     <link rel="stylesheet" href="/css/forms.css">
     <link rel="stylesheet" href="/css/auth.css">
-
 </head>
 
 <body>
@@ -10,18 +9,31 @@
     <main>
         <% if (errorMessage) { %>
             <div class="user-message user-message--error"><%= errorMessage %></div>
-        <% } %>  
+        <% } %>
         <form class="login-form" action="/login" method="POST">
             <div class="form-control">
-                <label for="title">E-Mail</label>
-                <input type="email" name="email" id="email" >
+                <label for="email">E-Mail</label>
+                <input 
+                    class="<%= validationErrors.find(e => e.param === 'email') ? 'invalid' : '' %>"
+                    type="email" 
+                    name="email" 
+                    id="email" 
+                    value="<%= oldInput.email %>">
             </div>
             <div class="form-control">
-                <label for="imageUrl">Password</label>
-                <input type="password" name="password" id="password" >
+                <label for="password">Password</label>
+                <input 
+                    class="<%= validationErrors.find(e => e.param === 'password') ? 'invalid' : '' %>"
+                    type="password" 
+                    name="password" 
+                    id="password" 
+                    value="<%= oldInput.password %>">
             </div>
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <button class="btn" type="submit">Login</button>
         </form>
+        <div class="centered">
+            <a href="/reset">Reset Password</a>
+        </div>
     </main>
 <%- include('../includes/end.ejs') %>
