--- a/public/css/main.css
+++ b/public/css/main.css
@@ -43,7 +43,7 @@ form {
 .main-header__nav {
   height: 100%;
   width: 100%;
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: space-between;
 }
@@ -109,16 +109,23 @@ form {
   padding: 0;
 }
 
-.mobile-nav__item a {
+.mobile-nav__item a,
+.mobile-nav__item button {
+  font: inherit;
   text-decoration: none;
   color: black;
   font-size: 1.5rem;
   padding: 0.5rem 2rem;
+  background: transparent;
+  border: none;
+  cursor: pointer;
 }
 
 .mobile-nav__item a:active,
 .mobile-nav__item a:hover,
-.mobile-nav__item a.active {
+.mobile-nav__item a.active,
+.mobile-nav__item button:hover,
+.mobile-nav__item button:active {
   background: #00695c;
   color: white;
   border-radius: 3px;
@@ -231,8 +238,8 @@ form {
   border: 1px solid #4771fa;
   padding: 0.5rem;
   border-radius: 3px;
+  background: #b9c9ff;
   text-align: center;
-  background: #b9c9ff
 }
 
 .user-message--error {
@@ -249,6 +256,7 @@ form {
   #side-menu-toggle {
     display: none;
   }
+
   .user-message {
     width: 30rem;
   }
